@@ -84,10 +84,10 @@ public class CorbaPrimitiveHandlerTest extends Assert {
         assertNotNull(obj);
 
         //CXF corba maps the XML char type to a Byte so we need to provide the string data as a Byte value
-        Byte byteValue = new Byte((byte)val.charValue());
+        Byte byteValue = Byte.valueOf((byte)val.charValue());
         obj.setValueFromData(byteValue.toString());
         String result = obj.getDataFromValue();
-        Byte byteResult = new Byte(result);
+        Byte byteResult = Byte.valueOf(result);
         assertTrue(byteResult.byteValue() == byteValue.byteValue());
 
         // However, internally, we also hold the data as a character to make it easier to marshal the data
@@ -125,7 +125,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaOctet() {
-        Byte val = new Byte((byte)100);
+        Byte val = Byte.valueOf((byte)100);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("octet"),
                                       CorbaConstants.NT_CORBA_OCTET,
@@ -147,7 +147,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaShort() {
-        Short val = new Short((short)1234);
+        Short val = Short.valueOf((short)1234);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("short"),
                                       CorbaConstants.NT_CORBA_SHORT,
@@ -169,7 +169,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaUShort() {
-        Short val = new Short((short)4321);
+        Short val = Short.valueOf((short)4321);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("ushort"),
                                       CorbaConstants.NT_CORBA_USHORT,
@@ -191,7 +191,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaLong() {
-        Integer val = new Integer(123456);
+        Integer val = Integer.valueOf(123456);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("long"),
                                       CorbaConstants.NT_CORBA_LONG,
@@ -213,7 +213,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaULong() {
-        Integer val = new Integer(654321);
+        Integer val = Integer.valueOf(654321);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("ulong"),
                                       CorbaConstants.NT_CORBA_ULONG,
@@ -235,7 +235,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaLongLong() {
-        Long val = new Long(123456789);
+        Long val = Long.valueOf(123456789);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("longlong"),
                                       CorbaConstants.NT_CORBA_LONGLONG,
@@ -257,7 +257,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaULongLong() {
-        Long val = new Long(987654321);
+        Long val = Long.valueOf(987654321);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("ulonglong"),
                                       CorbaConstants.NT_CORBA_ULONGLONG,
@@ -301,7 +301,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaDouble() {
-        Double val = new Double(123456.789);
+        Double val = Double.valueOf(123456.789);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("double"),
                                       CorbaConstants.NT_CORBA_DOUBLE,
