@@ -96,7 +96,7 @@ public abstract class AbstractClientPersistenceTest extends AbstractBusClientSer
             bus.getOutFaultInterceptors().add(logOut);
 
             bus.getExtension(RMManager.class).getConfiguration()
-                .setBaseRetransmissionInterval(new Long(60000));
+                .setBaseRetransmissionInterval(Long.valueOf(60000));
 
             GreeterImpl implementor = new GreeterImpl();
             String address = "http://localhost:" + port + "/SoapContext/GreeterPort";
@@ -161,7 +161,7 @@ public abstract class AbstractClientPersistenceTest extends AbstractBusClientSer
 
     void populateStore() throws Exception {
 
-        bus.getExtension(RMManager.class).getConfiguration().setBaseRetransmissionInterval(new Long(60000));
+        bus.getExtension(RMManager.class).getConfiguration().setBaseRetransmissionInterval(Long.valueOf(60000));
         bus.getOutInterceptors().add(new MessageLossSimulator());
 
         greeter.greetMeOneWay("one");
@@ -228,7 +228,7 @@ public abstract class AbstractClientPersistenceTest extends AbstractBusClientSer
 
     void populateStoreAfterRestart() throws Exception {
 
-        bus.getExtension(RMManager.class).getConfiguration().setBaseRetransmissionInterval(new Long(60000));
+        bus.getExtension(RMManager.class).getConfiguration().setBaseRetransmissionInterval(Long.valueOf(60000));
 
         greeter.greetMeOneWay("five");
 
