@@ -107,7 +107,7 @@ public class RetransmissionGZIPTest extends AbstractBusClientServerTestBase {
         bus.getInFaultInterceptors().add(in);
         LoggingOutInterceptor out = new LoggingOutInterceptor();
         bus.getOutInterceptors().add(out);
-        bus.getExtension(RMManager.class).getConfiguration().setBaseRetransmissionInterval(new Long(4000));
+        bus.getExtension(RMManager.class).getConfiguration().setBaseRetransmissionInterval(Long.valueOf(4000));
 
         // an interceptor to simulate a transmission error
         MessageLossSimulator loser = new MessageLossSimulator();
